<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="100dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="30dp"
            android:textStyle="bold"
            android:text="@string/mainTitle"
            android:layout_height="wrap_content" />
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="200dp"
            app:dividerThickness="6dp"
            app:dividerColor="@color/gray_600"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/textBienvenu"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="200dp"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:id="@+id/mainBtn"
                android:text="@string/mainBtn"
                android:backgroundTint="@color/red_300"
                android:width="250dp"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:backgroundTint="@color/red_900"
                android:layout_marginTop="40dp"
                android:width="250dp"
                android:text="@string/connectBtn"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>